@@ -32,6 +32,7 @@
 		<grpc.version>1.68.1</grpc.version>
 		<protobuf.version>3.25.5</protobuf.version>
 		<grpc-spring-boot-starter.version>3.1.0.RELEASE</grpc-spring-boot-starter.version>
+		<argLine>-Dnet.bytebuddy.experimental=true</argLine>
 	</properties>
 
 	<dependencyManagement>
